syntax = "proto3";

package api.helloworld.v1;

option go_package = "helloword/api/helloworld/v1;v1";
option java_multiple_files = true;
option java_package = "api.helloworld.v1";

service User {
  rpc ListPage (UserListRequest) returns (UserListReply);
  rpc CreateByEmail (UserEmailRequest) returns (UserReply);
  rpc LoginByEmail (UserEmailLoginRequest) returns (LoginReply);
}

message UserListRequest {
  int64 pageNo = 1;
  int64 pageSize = 2;
  string sort = 3;
  string direction = 4;
  string realName = 5;
  string email = 6;
  int32 status = 7;
}

message UserReply {
  int64 id = 1;
  string realName = 2;
  string userName = 3;
  string email = 4;
  int32 status = 5;
  string roleCode = 6;
}

message UserListReply {
  int64 count = 1;
  int32 page_no = 2;
  int32 page_size = 3;
  repeated UserReply userList = 4;
}

message UserEmailRequest {
  string email = 1;
  string password = 2;
}

message UserEmailLoginRequest {
  string email = 1;
  string password = 2;
}

message LoginReply {
  string token = 1;
}